--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <h5 class="zoo-user-name">Raghavender</h5>                                                        
                                 <p class="cd-headline loading-bar">
                                     <span class="cd-words-wrapper">
-                                        <b class="is-visible">Automation Test Engineer</b>
+                                        <b class="is-visible"> SDET </b>
                                        
                                     </span>
                                 </p>
@@ -62,7 +62,7 @@
                             <div class="profile-socials">                                
                                 <ul class="list-inline social-icon text-center mx-auto mb-4"> 
                                     <li class="list-inline-item">
-                                        <a href="http://www.linkedin.com/in/raghavender-reddy-c-8b59b5282" class="bg-blue">
+                                        <a href="https://www.linkedin.com/in/raghavender-h-8b59b5282" class="bg-blue">
                                             <i class="uil uil-linkedin"></i>
                                         </a>
                                     </li>   
@@ -83,13 +83,9 @@
                                             <h4 class="header-title mb-3">About us !</h4>
                                         </div><!--end col-->
                                         <div class="col-sm-6 col-print-6 col-lg-12">
-                                            <h4 class="text-primary font-weight-bold">I'm Raghavender Reddy</h4>
+                                            <h4 class="text-primary font-weight-bold">I'm Raghavender </h4>
                                             
-                                            <p>Experienced Automation Test Engineer with over 4 years of expertise in designing test plans, developing automation scripts using
-                                                Selenium, and conducting API testing with Postman. Skilled in Agile methodologies, CI/CD tools like Jenkins, and test management
-                                                with Jira. Certified in ISTQB, Selenium Professional, and Agile Testing, with advanced training in automation and API testing, delivering
-                                                reliable, high-quality software solutions through collaboration and eƯicient processes.
-                                                </p>
+                                            <p>Results-driven Software Development Engineer in Test with expertise in designing and implementing robust automation frameworks for web, mobile, and API testing. Proficient in Selenium, Appium, Postman, and TestNG, ensuring high test coverage and efficiency in agile environments. Strong experience in CI/CD pipelines, performance testing, and defect triage, leading to significant improvements in release cycles and system stability. Adept at collaborating with cross-functional teams to enhance user experience and optimize cloud-based services. Certified in ISTQB, Selenium, and Agile Testing, demonstrating a commitment to quality assurance excellence.</p>
                                     </div><!--end row-->
                                 </div><!--end container-->
                             </section><!--end section-->
@@ -135,21 +131,21 @@
                                                         <div class="time-item">
                                                             <div class="item-info">
                                                                 <div class="font-14"> 2023 - Present</div>
-                                                                <h5 class="my-1 text-dark">Automation Test Engineer</h5>
+                                                                <h5 class="my-1 text-dark">Software Development Engineer in Test</h5>
                                                                 <p>Fiserv</p>
                                                             </div>
                                                         </div><!--end time-item-->   
                                                         <div class="time-item mt-3">
-                                                            <div class="item-info">
+                                                            <!-- <div class="item-info">
                                                                 <div class="font-14">2022 - 2022</div>
                                                                 <h5 class="my-1 text-dark">Quality Assurance Engineer</h5>
                                                                 <p>Medline Industries</p>
-                                                            </div>
+                                                            </div> -->
                                                         </div><!--end time-item-->   
                                                         <div class="time-item">
                                                             <div class="item-info">
                                                                 <div class="font-14"> 2019 - 2021</div>
-                                                                <h5 class="my-1 text-dark">Test Engineer</h5>
+                                                                <h5 class="my-1 text-dark">Software Test Engineer</h5>
                                                                 <p>IBM</p>
                                                             </div>
                                                         </div><!--end time-item-->  
