--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Raghavender Reddy</title>
+        <title>Raghavender</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- App favicon -->
@@ -136,11 +136,11 @@
                                                             </div>
                                                         </div><!--end time-item-->   
                                                         <div class="time-item mt-3">
-                                                            <!-- <div class="item-info">
+                                                            <div class="item-info">
                                                                 <div class="font-14">2022 - 2022</div>
                                                                 <h5 class="my-1 text-dark">Quality Assurance Engineer</h5>
                                                                 <p>Medline Industries</p>
-                                                            </div> -->
+                                                            </div>
                                                         </div><!--end time-item-->   
                                                         <div class="time-item">
                                                             <div class="item-info">
@@ -164,12 +164,12 @@
                                                     <h4 class="skill-title">Programming Languages</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="78" style="width: 78%;">
-                                                            <span class="percent-tooltip">78%</span>
+                                                            <span class="percent-tooltip">85%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
-                                                    <h4 class="skill-title">Java Technologies</h4> 
+                                                    <h4 class="skill-title">Test Automation</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="90" style="width: 90%;">
                                                             <span class="percent-tooltip">90%</span>
@@ -177,36 +177,36 @@
                                                     </div>
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
-                                                    <h4 class="skill-title">Frameworks and Libraries</h4> 
+                                                    <h4 class="skill-title">API Testing</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="80" style="width: 80%;">
-                                                            <span class="percent-tooltip">80%</span>
+                                                            <span class="percent-tooltip">92%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
-                                                    <h4 class="skill-title">Application Servers </h4> 
+                                                    <h4 class="skill-title">Performance Testing </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="95" style="width: 95%;">
-                                                            <span class="percent-tooltip">95%</span>
+                                                            <span class="percent-tooltip">88%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
-                                                    <h4 class="skill-title">Cloud Services</h4> 
+                                                    <h4 class="skill-title">Security Testing</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="78" style="width: 78%;">
-                                                            <span class="percent-tooltip">78%</span>
+                                                            <span class="percent-tooltip">85%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
-                                                <div class="skill-box"> 
+                                                <!-- <div class="skill-box"> 
                                                     <h4 class="skill-title">Service-Oriented Technologies</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="90" style="width: 90%;">
                                                             <span class="percent-tooltip">95%</span>
                                                         </span> 
-                                                    </div>
+                                                    </div> -->
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
                                                     <h4 class="skill-title">Database Technologies</h4> 
@@ -217,10 +217,10 @@
                                                     </div>
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
-                                                    <h4 class="skill-title">Development Tools </h4> 
+                                                    <h4 class="skill-title">CI/CD & Build Tools </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="95" style="width: 95%;">
-                                                            <span class="percent-tooltip">95%</span>
+                                                            <span class="percent-tooltip">92%</span>
                                                         </span> 
                                                     </div>
                                                 </div>
@@ -228,20 +228,20 @@
                                                     <h4 class="skill-title">Version Control </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="78" style="width: 78%;">
-                                                            <span class="percent-tooltip">78%</span>
+                                                            <span class="percent-tooltip">85%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
-                                                    <h4 class="skill-title">Build and CI Tools</h4> 
+                                                    <h4 class="skill-title">Cloud & Containers</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="90" style="width: 90%;">
-                                                            <span class="percent-tooltip">90%</span>
+                                                            <span class="percent-tooltip">82%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
-                                                    <h4 class="skill-title">Testing Frameworks</h4> 
+                                                    <h4 class="skill-title">Mobile Testing</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="80" style="width: 80%;">
                                                             <span class="percent-tooltip">80%</span>
@@ -249,10 +249,18 @@
                                                     </div>
                                                 </div><!--end skill-box-->
                                                 <div class="skill-box"> 
+                                                    <h4 class="skill-title">Development Tools</h4> 
+                                                    <div class="progress-line"> 
+                                                        <span data-percent="80" style="width: 80%;">
+                                                            <span class="percent-tooltip">90%</span>
+                                                        </span> 
+                                                    </div>
+                                                </div><!--end skill-box-->
+                                                <div class="skill-box"> 
                                                     <h4 class="skill-title">Operating Systems </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="95" style="width: 95%;">
-                                                            <span class="percent-tooltip">95%</span>
+                                                            <span class="percent-tooltip">90%</span>
                                                         </span> 
                                                     </div>
                                                 </div>
@@ -260,7 +268,7 @@
                                                     <h4 class="skill-title">Web Technologies </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="89" style="width: 89%;">
-                                                            <span class="percent-tooltip">89%</span>
+                                                            <span class="percent-tooltip">85%</span>
                                                         </span> 
                                                     </div>
                                                 </div>
@@ -323,7 +331,7 @@
                                                 </div>                    
                                                 <div class="content">
                                                     <h5>Free Call To Me:</h5>
-                                                    <span>+1 (916) 287-0634</span>
+                                                    <span>+1 (423) 708-2643</span>
                                                 </div>
                                             </div><!--end contact-info-->
                 
@@ -333,7 +341,7 @@
                                                 </div>                    
                                                 <div class="content">
                                                     <h5>Mail Me:</h5>
-                                                    <span>ragh3662@gmail.com</span>
+                                                    <span>rag4805@gmail.com</span>
                                                 </div>
                                             </div><!--end contact-info-->
                 
