--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                                     <h4 class="skill-title">Programming Languages</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="78" style="width: 78%;">
-                                                            <span class="percent-tooltip">85%</span>
+                                                            <span class="percent-tooltip">78%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
@@ -180,7 +180,7 @@
                                                     <h4 class="skill-title">API Testing</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="80" style="width: 80%;">
-                                                            <span class="percent-tooltip">92%</span>
+                                                            <span class="percent-tooltip">80%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
@@ -188,7 +188,7 @@
                                                     <h4 class="skill-title">Performance Testing </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="95" style="width: 95%;">
-                                                            <span class="percent-tooltip">88%</span>
+                                                            <span class="percent-tooltip">95%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
@@ -196,7 +196,7 @@
                                                     <h4 class="skill-title">Security Testing</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="78" style="width: 78%;">
-                                                            <span class="percent-tooltip">85%</span>
+                                                            <span class="percent-tooltip">78%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
@@ -207,7 +207,7 @@
                                                             <span class="percent-tooltip">95%</span>
                                                         </span> 
                                                     </div> -->
-                                                </div><!--end skill-box-->
+                                                <!-- </div>end skill-box -->
                                                 <div class="skill-box"> 
                                                     <h4 class="skill-title">Database Technologies</h4> 
                                                     <div class="progress-line"> 
@@ -220,7 +220,7 @@
                                                     <h4 class="skill-title">CI/CD & Build Tools </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="95" style="width: 95%;">
-                                                            <span class="percent-tooltip">92%</span>
+                                                            <span class="percent-tooltip">95%</span>
                                                         </span> 
                                                     </div>
                                                 </div>
@@ -228,7 +228,7 @@
                                                     <h4 class="skill-title">Version Control </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="78" style="width: 78%;">
-                                                            <span class="percent-tooltip">85%</span>
+                                                            <span class="percent-tooltip">78%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
@@ -236,7 +236,7 @@
                                                     <h4 class="skill-title">Cloud & Containers</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="90" style="width: 90%;">
-                                                            <span class="percent-tooltip">82%</span>
+                                                            <span class="percent-tooltip">90%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
@@ -252,7 +252,7 @@
                                                     <h4 class="skill-title">Development Tools</h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="80" style="width: 80%;">
-                                                            <span class="percent-tooltip">90%</span>
+                                                            <span class="percent-tooltip">80%</span>
                                                         </span> 
                                                     </div>
                                                 </div><!--end skill-box-->
@@ -260,7 +260,7 @@
                                                     <h4 class="skill-title">Operating Systems </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="95" style="width: 95%;">
-                                                            <span class="percent-tooltip">90%</span>
+                                                            <span class="percent-tooltip">95%</span>
                                                         </span> 
                                                     </div>
                                                 </div>
@@ -268,7 +268,7 @@
                                                     <h4 class="skill-title">Web Technologies </h4> 
                                                     <div class="progress-line"> 
                                                         <span data-percent="89" style="width: 89%;">
-                                                            <span class="percent-tooltip">85%</span>
+                                                            <span class="percent-tooltip">89%</span>
                                                         </span> 
                                                     </div>
                                                 </div>
