--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="profile-socials">                                
                                 <ul class="list-inline social-icon text-center mx-auto mb-4"> 
                                     <li class="list-inline-item">
-                                        <a href="https://www.linkedin.com/in/raghavender-red-bcd3hf2jd5vd6" class="bg-blue">
+                                        <a href="https://www.linkedin.com/in/raghavender-reddi-gb3da2jfk7nht" class="bg-blue">
                                             <i class="uil uil-linkedin"></i>
                                         </a>
                                     </li>   
@@ -85,7 +85,7 @@
                                         <div class="col-sm-6 col-print-6 col-lg-12">
                                             <h4 class="text-primary font-weight-bold">I'm Raghavender</h4>
                                             
-                                            <p>Experienced Software Engineer with expertise in full-stack development, cloud-native architectures, and microservices. Skilled in Java, Spring Boot, Node.js, React, and AWS, with a strong focus on building scalable, high-performance systems. Proven ability to optimize deployment pipelines, streamline workflows, and enhance system reliability. Certified in AWS and experienced in modern DevOps practices, including containerization with Docker and orchestration using Kubernetes. Holds a Master’s in Computer Science, reflecting a commitment to continuous learning and technical excellence.</p>
+                                            <p>Results-driven Software Engineer with over 4 years of experience in full-stack development, cloud-native applications, and microservices architecture. Skilled in Java, Python, and JavaScript with expertise in AWS, Spring Boot, React, and container orchestration using Docker and Kubernetes. Proven track record in building scalable, secure systems and optimizing performance, backed by hands-on experience at Experian, CVS Health, and Amazon. Certified AWS Solutions Architect with strong analytical skills and a deep understanding of DevOps and CI/CD best practices.</p>
                                     </div><!--end row-->
                                 </div><!--end container-->
                             </section><!--end section-->
@@ -106,14 +106,14 @@
                                                     <div class="timeline">
                                                         <div class="time-item">
                                                             <div class="item-info">
-                                                                <div class="font-14">2022 - 2024</div>
+                                                                <div class="font-14">2021 - 2022</div>
                                                                 <h5 class="my-1 text-dark">Master’s in Computer Science </h5>
                                                                 <p>Southern University and A&M College, Baton Rouge, Louisiana</p>
                                                             </div>
                                                         </div><!--end time-item--> 
                                                         <div class="time-item">
                                                             <div class="item-info">
-                                                                <div class="font-14">2014 - 2018</div>
+                                                                <div class="font-14">2015 - 2019</div>
                                                                 <h5 class="my-1 text-dark">Bachelor of Technology in Computer Science </h5>
                                                                 <p>Jawaharlal Nehru Technological University</p>
                                                             </div>
@@ -130,23 +130,23 @@
                                                     <div class="timeline">
                                                         <div class="time-item">
                                                             <div class="item-info">
-                                                                <div class="font-14"> 2024 - Present</div>
+                                                                <div class="font-14"> 2023 - Present</div>
                                                                 <h5 class="my-1 text-dark">Software Engineer</h5>
                                                                 <p>Experian</p>
                                                             </div>
                                                         </div><!--end time-item-->   
                                                         <div class="time-item">
                                                             <div class="item-info">
-                                                                <div class="font-14"> 2020 - 2022</div>
+                                                                <div class="font-14"> 2022 - 2023</div>
                                                                 <h5 class="my-1 text-dark">Software Development Engineer</h5>
-                                                                <p>Amazon Development Centre</p>
+                                                                <p>CVS Health</p>
                                                             </div>
                                                         </div><!--end time-item-->  
                                                         <div class="time-item">
                                                             <div class="item-info">
-                                                                <div class="font-14"> 2018 - 2020</div>
-                                                                <h5 class="my-1 text-dark">Software Developer</h5>
-                                                                <p>Tata Consultancy Services</p>
+                                                                <div class="font-14"> 2019 - 2021</div>
+                                                                <h5 class="my-1 text-dark">Software Development Engineer</h5>
+                                                                <p>Amazon Development Centre</p>
                                                             </div>
                                                         </div><!--end time-item-->  
 
